--- a/ProyectoAccesoriosNauticos/src/Vista/AgregarProducto.form
+++ b/ProyectoAccesoriosNauticos/src/Vista/AgregarProducto.form
@@ -126,7 +126,7 @@
                     <Property name="horizontalAlignment" type="int" value="0"/>
                     <Property name="text" type="java.lang.String" value="X"/>
                     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                      <Color id="Default Cursor"/>
+                      <Color id="Cursor Por defecto"/>
                     </Property>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[40, 40]"/>
@@ -181,11 +181,11 @@
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="5">
-                <StringItem index="0" value="Electronicos"/>
+                <StringItem index="0" value="Electronico"/>
                 <StringItem index="1" value="Seguridad"/>
-                <StringItem index="2" value="Vehiculos"/>
+                <StringItem index="2" value="Motor"/>
                 <StringItem index="3" value="Combustible"/>
-                <StringItem index="4" value="Miscelaneos"/>
+                <StringItem index="4" value="Miscelaneo"/>
               </StringArray>
             </Property>
             <Property name="autoscrolls" type="boolean" value="true"/>
@@ -193,7 +193,7 @@
               <Border info="null"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Default Cursor"/>
+              <Color id="Cursor Por defecto"/>
             </Property>
             <Property name="focusable" type="boolean" value="false"/>
           </Properties>
