--- a/ProyectoAccesoriosNauticos/src/Vista/CrearSalida.form
+++ b/ProyectoAccesoriosNauticos/src/Vista/CrearSalida.form
@@ -3,14 +3,14 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-<<<<<<< HEAD:ProyectoAccesoriosNauticos/src/Vista/CrearSalida.form
-=======
     <Property name="title" type="java.lang.String" value="Inicio de Sesion"/>
     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-      <Color id="Default Cursor"/>
+      <Color id="Cursor Por defecto"/>
     </Property>
+    <Property name="focusTraversalPolicyProvider" type="boolean" value="true"/>
+    <Property name="locationByPlatform" type="boolean" value="true"/>
+    <Property name="undecorated" type="boolean" value="true"/>
     <Property name="resizable" type="boolean" value="false"/>
->>>>>>> 5dd0b825fdd77a1af00813d3b009c80d47628fd0:ProyectoAccesoriosNauticos/src/Vista/Inicio.form
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -76,13 +76,8 @@
         </Component>
         <Component class="javax.swing.JLabel" name="Logo">
           <Properties>
-<<<<<<< HEAD:ProyectoAccesoriosNauticos/src/Vista/CrearSalida.form
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/Imagenes/LogoCir.png"/>
-=======
-            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="null"/>
->>>>>>> 5dd0b825fdd77a1af00813d3b009c80d47628fd0:ProyectoAccesoriosNauticos/src/Vista/Inicio.form
             </Property>
           </Properties>
           <Constraints>
